@@ -11,17 +11,25 @@ buildscript {
     }
 }
 
+//compileJava{
+//    doFirst(
+//        options.compilerArgs = [
+//            '--add-modules', 'java.xml.bind'],
+//        classpath = files()
+//    )
+//}
+
 task dockerBuild(type:Exec,dependsOn:build){
     workingDir './'
-    commandLine "PowerShell", "copy ./src/main/resources/Dockerfile ./build/libs/Dockerfile"
+    commandLine "PowerShell", "copy ./src/main/resources/Dockerfile ."
     workingDir "./build/libs"
     commandLine "PowerShell", "docker build -t springboot ."
 }
 
-apply plugin: 'java'
-apply plugin: 'kotlin'
 apply plugin: 'org.springframework.boot'
 
+apply plugin: 'java'
+apply plugin: 'kotlin'
 
 
 group = 'xyz.ivyxjc'
